[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/xilosa_.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/SpritesFinais/ObetosCostura/Quadrado Borda Textura.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SpritesFinais/ObetosCostura/Quadrado Miolo Textura.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Costura/RetalhoFrases.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.7085, 66.1916 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[node name="RetalhoFrases" type="TextureButton"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miolo" type="Sprite" parent="."]
position = Vector2( -3.5, -1.5 )
scale = Vector2( 0.7, 0.777 )
texture = ExtResource( 3 )

[node name="Borda" type="Sprite" parent="."]
position = Vector2( -3.5, -1.5 )
scale = Vector2( 0.59, 0.62 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.53554, -1.41422 )
shape = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -71.0
margin_top = -45.0
margin_right = 44.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -70.0
margin_top = -34.0
margin_right = 144.0
margin_bottom = 55.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.65, 0.85 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
